<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电视节目预告</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="category_home">首页</string>
    <string name="category_collect">收藏</string>
    <string name="category_search">搜索</string>
    <string name="category_hot">热门</string>
    <string name="category_more">更多</string>
    <string name="back">返回</string>
    <string name="title_activity_collect">CollectActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="title_activity_channellist">ChannellistActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="sample_item_text">CCTV-1(综合)</string>
    <string name="sample_item_program">电视剧:赵氏孤儿案32</string>
    <string name="title_activity_channel_detail">ChannelDetailActivity</string>
    <string name="sample_title">CCTV-1</string>
    <string name="collect">收藏</string>
    <string name="delete">删除</string>
    <string name="collect_success">收藏成功！</string>
    <string name="collect_channel_success">收藏\" %1$s \"成功！</string>
    <string name="cancel_collect">已取消收藏</string>
    <string name="search_hint">搜索节目关键字</string>
    <string name="search">搜索</string>
    <string name="title_activity_categorylist">CategorylistActivity</string>
    <string name="title_activity_alarmalert">AlarmAlertActivity</string>
    <string name="recent_view">最近查看</string>
    <string name="user_home">个人中心</string>
    <string name="alarm">闹钟提醒</string>
    <string name="version_check">检查新版本 (当前: %1$s)</string>
    <string name="version_upgrade">版本升级 (%1$s -> %2$s)</string>
    <string name="issue_title">意见反馈</string>
    <string name="about">关于</string>
    <string name="refresh">刷新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="quit">退出</string>
    <string name="m1_alarm">提前1分钟提醒</string>
    <string name="m3_alarm">提前3分钟提醒</string>
    <string name="m5_alarm">提前5分钟提醒</string>
    <string name="m10_alarm">提前10分钟提醒</string>
    <string name="cancel_alarm">取消闹钟</string>
    <string name="self_decide">自定义</string>
    <string name="ok">确定</string>
    <string name="tips">提示</string>
    <string name="alarm_tips">请选择闹钟时间</string>
    <string name="alarm_tips_set">闹钟已设置</string>
    <string name="alarm_tips_cancel">闹钟已取消</string>
    <string name="alarm_tips_can_set">提示：长按节目可以设置闹钟提醒</string>
    <string name="alarm_tips_cannot_set">您不能给已经播出的节目定闹钟</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="title_activity_alarm_setting">AlarmSettingActivity</string>
    <string name="check_update">检查更新</string>
    <string name="cancel">取消</string>
    <string name="feedback_hint">请输入您的建议，这将帮助我们将产品做得更好，谢谢</string>
    <string name="email_hint">选填，以便我们给您回复</string>
    <string name="your_email">您的邮箱：</string>
    <string name="feedback">问题反馈</string>
    <string name="submit">提交</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="no_found_tips">抱歉，今天没有相关的节目！</string>
    <string name="server_is_busy">服务器繁忙，请稍后重试</string>
    <string name="promote_collect_tips">把喜爱的节目收藏在这儿吧！</string>
    <string name="channels">频道(%1$s)</string>
    <string name="programs">节目(%1$s)</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="content_introduce">内容介绍</string>
    <string name="plot_introduce">分集剧情介绍</string>
    <string name="loading_string">加载中...</string>
    <string name="actor_list">演员表</string>
    <string name="plot_sumary">剧情简介</string>
    <string name="playtime">播出时间</string>
    <string name="no_data">暂无数据</string>
    <string name="title_activity_episode">EpisodeActivity</string>
    <string name="plot_detail">（分集剧情）</string>
    <string name="full_day">全天节目</string>
    <string name="morning">凌晨上午节目</string>
    <string name="midday">中午下午节目</string>
    <string name="evening">晚间节目</string>
    <string name="programchannellist">频道列表</string>
    <string name="crash_toast_text">抱歉，程序崩溃了！\n错误已发送，后续会修复这个问题！</string>
    <string name="program_introduce">预告:</string>
    <string name="setting_dialog">设置闹钟</string>
    <string name="long_press_sort_tips">提示：长按节目可以调整顺序</string>
    <string name="pop_search">大家正在搜：</string>
    <string name="history_search">历史搜索：</string>
    <string name="clear">清除</string>
    <string name="tv_drama">电视剧</string>
    <string name="tv_column">电视栏目</string>
    <string name="movie">电影</string>
    <string name="support_us">支持我们</string>
    <string name="support_us_remove_ad">支持我们（去除广告）</string>
    <string name="title_activity_support">SupportActivity</string>
    <string name="action_settings">Settings</string>
    <string name="support_promotion">您的每一份支持都将投入到我们的项目预算中，用来支持我们开发更多更好的功能。同时也是对我们工作的肯定与鼓励。</string>
    <string name="current_point_hint">您当前金币：</string>
    <string name="current_point">%1$s</string>
    <string name="earn_point">赚取金币</string>
    <string name="ps_hint">PS： 金币到账时间可能有几分钟的延时哦！^_^</string>
    <string name="remove_oneday_ad">关闭广告一天%1$s：</string>
    <string name="remove_ad">永久移除烦人的广告：</string>
    <string name="x_points">%1$s 金币</string>
    <string name="restore_points">恢复金币</string>
    <string name="restore_points_hint">重装本软件时请点击：</string>
    <string name="title_activity_advance_alarm">AdvanceAlarmActivity</string>
    <string name="weekly">每周</string>
    <string name="daily">每天</string>
    <string name="once">一次</string>
    <string name="week1">周一</string>
    <string name="week2">周二</string>
    <string name="week3">周三</string>
    <string name="week4">周四</string>
    <string name="week5">周五</string>
    <string name="week6">周六</string>
    <string name="week7">周日</string>
    <string name="weekhint">选择每周几进行提醒:</string>
    <string name="program">节目:</string>
    <string name="time">时间:</string>
    <string name="tvchannel">电视台:</string>
    <string name="promptrate">提醒频率:</string>
    <string name="datehint">设置提醒日期:</string>
    <string name="timehint">设置提醒时间:</string>
    <string name="savealarm">保存闹铃</string>
    <string name="advance5m">提前5分钟</string>
    <string name="advance10m">提前10分钟</string>
    <string name="advance30m">提前30分钟</string>
    <string name="noalarm">没有添加节目提醒</string>

</resources>