<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/light_dark_bg"
  xmlns:android="http://schemas.android.com/apk/res/android" >
    <RelativeLayout android:gravity="center_vertical" android:id="@+id/shake_title_bar" android:background="@drawable/title_bar" android:layout_width="fill_parent" android:layout_height="45.0dip">
        <Button android:textSize="14.0sp" android:textColor="#ffffffff" android:background="@drawable/title_btn_back" android:layout_width="70.0dip" android:layout_height="wrap_content" android:text="@string/back" android:layout_centerVertical="true" android:onClick="back" />
        <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_us" android:layout_centerInParent="true" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/promotion_rl" android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:gravity="center" android:layout_marginTop="10dp" >
        <TextView android:id="@+id/promotion_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" 
                android:layout_margin="20dp" android:textSize="18sp" android:textColor="@color/black" android:text="@string/support_promotion" />
        
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/promotion_tv" 
                    android:layout_marginTop="30sp" android:gravity="center" >
	        <TextView android:id="@+id/current_point_hint_tv"  android:layout_width="wrap_content"
	                android:layout_height="wrap_content" android:layout_margin="10dp" android:drawableLeft="@drawable/golden_coins"
	                android:drawablePadding="5sp" android:textSize="18sp" android:textColor="@color/orange" android:text="@string/current_point_hint" /> 
	        <TextView android:id="@+id/current_point_tv" android:layout_width="60sp" android:layout_height="wrap_content"
	                android:layout_alignBaseline="@id/current_point_hint_tv" android:layout_toRightOf="@id/current_point_hint_tv"
	                android:textSize="22sp" android:textColor="@color/red" android:text="@string/current_point" />
	        <Button android:id="@+id/get_point_btn" android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_alignBaseline="@id/current_point_hint_tv" android:layout_toRightOf="@id/current_point_tv" 
	                android:textColor="@color/black" android:textSize="20sp" android:text="@string/earn_point" android:onClick="onClick" />
	        <TextView android:id="@+id/ps_hint" android:layout_width="wrap_content" android:layout_height="wrap_content"
	                android:layout_below="@id/current_point_hint_tv" android:layout_margin="10sp"
	                android:textColor="@color/darkgray" android:text="@string/ps_hint" />
        </RelativeLayout>
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/remove_ad_rl" android:layout_width="fill_parent" android:layout_height="wrap_content" 
                android:layout_marginTop="80dp" android:gravity="center" >
        <TextView android:id="@+id/remove_ad_tv" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_margin="20dp" android:textSize="18sp" android:textColor="@color/light_blue" android:text="@string/remove_ad" />
        <Button android:id="@+id/remove_ad_btn" android:layout_width="100sp" android:layout_height="40sp"
                android:layout_alignParentRight="true"  android:layout_alignBaseline="@id/remove_ad_tv"
                android:layout_margin="20dp" android:textSize="16sp" android:textColor="@color/black" 
                android:text="@string/x_points" android:onClick="onClick" />
        <TextView android:id="@+id/restore_points_tv" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:layout_below="@id/remove_ad_tv" android:layout_margin="20dp" android:textSize="18sp" 
                android:textColor="@color/light_blue" android:text="@string/restore_points_hint" />
        <Button android:id="@+id/restore_points_btn" android:layout_width="100sp" android:layout_height="40sp"
                android:layout_alignParentRight="true" android:layout_alignBaseline="@id/restore_points_tv"
                android:layout_margin="20dp" android:textSize="16sp" android:textColor="@color/black" 
                android:text="@string/restore_points" android:onClick="onClick" />
    </RelativeLayout>
    
</LinearLayout>