<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/shape_bottom_corner_no_top_line" 
              android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:descendantFocusability="blocksDescendants" xmlns:android="http://schemas.android.com/apk/res/android">
	<ImageView android:id="@+id/collect_item_logo" android:src="@drawable/sample_logo" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" />
	<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="8.0dip" android:layout_weight="1" >
	    <TextView android:id="@+id/collect_item_channel" android:textColor="#ff000000" android:singleLine="true" android:textSize="15.0dip" android:text="@string/sample_item_text"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="6.0dip" />
	    <TextView android:id="@+id/collect_item_program" android:textColor="#ff000000" android:singleLine="true" android:ellipsize="marquee" android:textSize="12.0dip" android:text="@string/sample_item_program" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_marginBottom="6.0dip" />
	</LinearLayout>
	<Button android:id="@+id/collect_item_del_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" 
	        android:background="@drawable/title_btn_right" android:text="@string/delete" android:textSize="16sp"
	        android:layout_gravity="center" />
</LinearLayout>